Deprecate method fix